update LeetCode solution - Dynamic Programming

--- a/algorithm/LeetCode/[Hard] 1312. Minimum Insertion Steps to Make a String Palindrome.md
+++ b/algorithm/LeetCode/[Hard] 1312. Minimum Insertion Steps to Make a String Palindrome.md
@@ -48,7 +48,7 @@ Output: 1
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP Bottom-Up)**
 
 **Intuition**
 Split the string `s` into to two parts,
@@ -98,4 +98,25 @@ class Solution:
                     dp[i+1][j+1] = max(dp[i][j+1], dp[i+1][j])
 
         return N - dp[N][N]
+```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 1780 ms
+Memory Usage: 335.7 MB
+```
+```python
+class Solution:
+    def minInsertions(self, s: str) -> int:
+        N = len(s)
+        
+        @functools.lru_cache(None)
+        def dp(i, j):
+            if i == N or j < 0: return 0
+            if s[i] == s[j]:
+                return 1+dp(i+1, j-1)
+            else:
+                return max(dp(i+1, j), dp(i, j-1))
+            
+        return N - dp(0, N-1)
 ```
