--- a/algorithm/LeetCode/[Hard] 1326. Minimum Number of Taps to Open to Water a Garden.md
+++ b/algorithm/LeetCode/[Hard] 1326. Minimum Number of Taps to Open to Water a Garden.md
@@ -4,7 +4,7 @@ There is a one-dimensional garden on the x-axis. The garden starts at the point 
 
 There are `n + 1` taps located at points `[0, 1, ..., n]` in the garden.
 
-Given an integer `n` and an integer array ranges of length `n + 1` where `ranges[i]` (`0`-indexed) means the `i`-th tap can water the area `[i - ranges[i], i + ranges[i]]` if it was open.
+Given an integer `n` and an integer array `ranges` of length `n + 1` where `ranges[i]` (`0`-indexed) means the `i`-th tap can water the area `[i - ranges[i], i + ranges[i]]` if it was open.
 
 Return the minimum number of taps that should be open to water the whole garden, If the garden cannot be watered return `-1`.
 
@@ -58,7 +58,34 @@ Output: 1
 
 # Submissions
 ---
-**Solution 1: (DP)**
+**Solution 1: (DP Bottom-Up)**
+
+**Intuition**
+Example 2 did confuse me.  
+We actually need to water the whole segment, instead of n + 1 point.  
+The taps with value 0 can water nothing.
+
+
+**Solution 1: Brute Force DP**
+
+* dp[i] is the minimum number of taps to water [0, i].
+* Initialize dp[i] with max = n + 2
+* xdp[0] = [0] as we need no tap to water nothing.
+
+* Find the leftmost point of garden to water with tap i.
+* Find the rightmost point of garden to water with tap i.
+* We can water [left, right] with onr tap,
+and water [0, left - 1] with dp[left - 1] taps.
+
+
+**Complexity**
+
+* Time O(NR), where R = ranges[i] <= 100
+* Space O(N)
+
+**Similar:**
+
+* 1024. Video Stitching
 ```
 Runtime: 936 ms
 Memory Usage: 12.9 MB
@@ -71,4 +98,24 @@ class Solution:
             for j in range(max(i - x + 1, 0), min(i + x, n) + 1):
                 dp[j] = min(dp[j], dp[max(0, i - x)] + 1)
         return dp[n] if dp[n] < n + 2 else -1
+```
+
+**Solution 2: (DP Top-Down, Time Limit Exceeded)**
+```python
+class Solution:
+    def minTaps(self, n: int, ranges: List[int]) -> int:
+
+        @functools.lru_cache(None)
+        def dp (pre, cur):
+            if cur >= n:
+                return 0
+            rst = float('inf')
+            for j in range(pre+1, n+1):
+                if j-ranges[j] <= cur <= j+ranges[j]:
+                    rst = min(rst, 1 + dp(j, j+ranges[j]))
+            return rst
+
+        ans = dp(-1, 0)
+
+        return -1 if ans == float('inf') else ans
 ```
