--- a/algorithm/LeetCode/[Hard] 1335. Minimum Difficulty of a Job Schedule.md
+++ b/algorithm/LeetCode/[Hard] 1335. Minimum Difficulty of a Job Schedule.md
@@ -4,7 +4,7 @@ You want to schedule a list of jobs in `d` days. Jobs are dependent (i.e To work
 
 You have to finish at least one task every day. The difficulty of a job schedule is the sum of difficulties of each day of the `d` days. The difficulty of a day is the maximum difficulty of a job done in that day.
 
-Given an array of integers `jobDifficulty` and an integer d. The difficulty of the `i`-th job is `jobDifficulty[i]`.
+Given an array of integers `jobDifficulty` and an integer `d`. The difficulty of the `i`-th job is `jobDifficulty[i]`.
 
 Return the minimum difficulty of a job schedule. If you cannot find a schedule for the jobs return `-1`.
 
@@ -55,7 +55,7 @@ Output: 843
 
 # Submissions
 ---
-**Solution 1: (DFS)**
+**Solution 1: (DP Top-Down)**
 
 **Explanation**
 
@@ -92,4 +92,28 @@ class Solution:
                 res = min(res, maxd + dfs(j + 1, d - 1))
             return res
         return dfs(0, d)
+```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 1844 ms
+Memory Usage: 21.5 MB
+```
+```python
+class Solution:
+    def minDifficulty(self, jobDifficulty: List[int], d: int) -> int:
+        N = len(jobDifficulty)
+        if N < d:
+            return -1
+        maxval = {}
+        for i in range(1, N+1):
+            for k in range(i):
+                maxval[(k,i)] = max(jobDifficulty[k:i])
+        dp = [[float('inf')]*(d+1) for _ in range(N+1) ]
+        dp[0][0] = 0
+        for i in range(1, N+1):
+            for j in range(1, min(i+1, d+1)):
+                for k in range(i):
+                    dp[i][j] = min(dp[i][j], dp[k][j-1] + maxval[(k,i)])
+        return dp[N][d]
 ```
