--- a/algorithm/LeetCode/[Hard] 1340. Jump Game V.md
+++ b/algorithm/LeetCode/[Hard] 1340. Jump Game V.md
@@ -1,4 +1,4 @@
-1344. Jump Game V
+1340. Jump Game V
 
 Given an array of integers `arr` and an integer `d`. In one step you can jump from index `i` to index:
 
@@ -68,8 +68,8 @@ until it meet the bound or meet the bigger step.
 * Space complexity O(N) for dp
 
 ```
-Runtime: 844 ms
-Memory Usage: 14.5 MB
+Runtime: 720 ms
+Memory Usage: 17.2 MB
 ```
 ```python
 class Solution:
@@ -77,8 +77,8 @@ class Solution:
         N = len(arr)
         res = [0] * N
 
+        @functools.lru_cache(None)
         def dp(i):
-            if res[i]: return res[i]
             res[i] = 1
             for di in [-1, 1]:
                 for j in range(i + di, i + d*di + di, di):
