--- a/algorithm/LeetCode/[Hard] 1349. Maximum Students Taking Exam.md
+++ b/algorithm/LeetCode/[Hard] 1349. Maximum Students Taking Exam.md
@@ -97,3 +97,32 @@ class Solution:
                     count += 1
         return count - res
 ```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 108 ms
+Memory Usage: 14.3 MB
+```
+```python
+class Solution:
+    def maxStudents(self, seats: List[List[str]]) -> int:
+        R, C = len(seats), len(seats[0])
+        g = [sum((x == '#') << i for i,x in enumerate(row)) for row in seats]
+            
+        @lru_cache(None)
+        def solve(i,x):
+            if x & g[i]:
+                return 0
+            if x & (x << 1):
+                return 0
+            popcnt = bin(x).count("1")
+            if i == 0:
+                return popcnt
+            ret = popcnt
+            for y in range(1<<C):
+                if not ((x << 1) & y) and not ((x >> 1) & y):
+                    ret = max(ret, popcnt + solve(i-1, y))
+            return ret
+        
+        return max(solve(R-1, x) for x in range(1 << C))
+```
