--- a/algorithm/LeetCode/[Hard] 1359. Count All Valid Pickup and Delivery Options.md
+++ b/algorithm/LeetCode/[Hard] 1359. Count All Valid Pickup and Delivery Options.md
@@ -93,3 +93,16 @@ class Solution:
     def countOrders(self, n: int) -> int:
         return (math.factorial(n * 2) >> n) % (10**9 + 7)
 ```
+
+**Solution 3: (Math)**
+```
+Runtime: 20 ms
+Memory Usage: 13.8 MB
+```
+```python
+class Solution:
+    def countOrders(self, n: int) -> int:
+        if n == 1:
+            return 1
+        return (math.factorial(2*n) // (2**n)) % (10**9 + 7)
+```
