--- a/algorithm/LeetCode/[Hard] 1402. Reducing Dishes.md
+++ b/algorithm/LeetCode/[Hard] 1402. Reducing Dishes.md
@@ -85,3 +85,69 @@ class Solution:
             
         return res
 ```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 48 ms
+Memory Usage: 14.1 MB
+```
+```python
+class Solution:
+    def maxSatisfaction(self, satisfaction: List[int]) -> int:
+        # Example case (sorted):
+        # [-8, -7, -1, 0,  5]
+        
+        # Possible cooks:
+        # -8*1 -7*2 -1*3 + 0*4 + 5*5 =  0
+        #      -7*1 -1*2 + 0*3 + 5*4 = 11
+        #           -1*1 + 0*2 + 5*3 = 14
+        
+        # We observe the following pattern:
+        # s1 = a*1 + b*2 + c*3
+        # s2 = b*1 + c*2
+        # s3 = c*1
+        
+        # We can express the terms recursively:
+        # s2 = s1 - (a + b + c)
+        # s3 = s2 - (b + c)
+        
+        # The solution follows from there:
+        
+        satisfaction = sorted(satisfaction)
+        t = sum(satisfaction)
+        n = len(satisfaction)
+        dp = [0] * n
+        
+        dp[0] = sum([(i+1)*sat for i, sat in enumerate(satisfaction)])
+        
+        ans = max(dp[0], 0)
+        
+        for i in range(1, n):
+            dp[i] = dp[i-1] - t
+            t -= satisfaction[i-1]
+            ans = max(ans, dp[i])
+        
+        return ans
+```
+
+**Solution 3: (DP Top-Down)**
+```
+Runtime: 888 ms
+Memory Usage: 187.4 MB
+```
+```python
+class Solution:
+    def maxSatisfaction(self, satisfaction: List[int]) -> int:
+        satisfaction.sort()
+        N = len(satisfaction)
+
+        @functools.lru_cache(None)
+        def dp(i, time):
+            if i >= N:
+                return 0
+            take = dp(i+1, time+1) + time*satisfaction[i]
+            nottake = dp(i+1, time)
+            return max(take, nottake)
+
+        return dp(0, 1)
+```
