--- a/algorithm/LeetCode/[Hard] 1278. Palindrome Partitioning III.md
+++ b/algorithm/LeetCode/[Hard] 1278. Palindrome Partitioning III.md
@@ -36,16 +36,17 @@ Output: 0
 
 # Submissons
 ---
-**Solution 1:**
+**Solution 1: (2 DP Top-Down)**
 ```
 Runtime: 244 ms
-Memory Usage: 14.3 MB
+Memory Usage: 15.4 MB
 ```
 ```python
-from functools import lru_cache
 class Solution:
     def palindromePartition(self, s: str, k: int) -> int:
-        @lru_cache(maxsize=None)
+        N = len(s)
+        
+        @lru_cache(None)
         def nchange(i, j):
             res = 0
             while i < j:
@@ -53,13 +54,88 @@ class Solution:
                     res += 1
                 i,j = i+1, j-1
             return res
-        
-        @lru_cache(maxsize=None)
+
+        @lru_cache(None)
         def part(st, k):
-            if k == 1: return nchange(st, len(s)-1)
+            if k == 1: return nchange(st, N-1)
             res = float('inf')
-            for i in range(st, len(s)):
+            for i in range(st, N):
                 res = min(res, nchange(st, i) + part(i+1, k-1))
             return res
+        
         return part(0, k)
+```
+
+
+**Solution 2: (DP Bottom-Up + DFS)**
+```
+Runtime: 2640 ms
+Memory Usage: 14 MB
+```
+```python
+class Solution:
+    def palindromePartition(self, s: str, k: int) -> int:
+        N = len(s)
+        if k > N:
+            return 0
+        dp = [[float('inf')] * (k + 1) for _ in range(N + 1)]
+        dp[0][0] = 0
+        
+        def min_op_palindrome(ss):
+            if not ss:
+                return 0
+
+            result = 0
+            i, j = 0, len(ss) - 1
+            while i < j:
+                if ss[i] != ss[j]:
+                    result += 1
+                i += 1
+                j -= 1
+            return result
+        
+        for i in range(len(dp)):
+            dp[i][1] = min_op_palindrome(s[:i])
+        for i in range(1, len(dp)):
+            for j in range(2, len(dp[0])):
+                for m in range(i):
+                    dp[i][j] = min(dp[m][j - 1] + min_op_palindrome(s[m:i]), dp[i][j])
+        return dp[-1][k]
+```
+
+**Solution 3: (DP Bottom-Up + DP Top-Down)**
+
+**Main idea:**
+
+* One DP for calculating the number of changes needed to make s[i:j+1] a palindrome (dp[i][j])
+* The other DPP for calculating the number of changes to make s[:i+1] contain k palindromes (dp[i][k])
+
+```
+Runtime: 112 ms
+Memory Usage: 14.7 MB
+```
+```python
+class Solution:
+    def palindromePartition(self, s: str, k: int) -> int:
+        dp = [[10000 + 1] * len(s) for _ in range(len(s))]
+        for i in range(len(s) - 1, -1, -1):
+            for j in range(i, len(s)):
+                if s[i] == s[j]:
+                    dp[i][j] = dp[i + 1][j - 1] if i + 1 < j - 1 else 0
+                else:
+                    dp[i][j] = 1 + (dp[i + 1][j - 1] if i + 1 <= j - 1 else 0)
+
+        
+        @functools.lru_cache(maxsize=None)
+        def dpp(i, k):
+            if k == 1:
+                return dp[0][i]
+            if k > i + 1:
+                return 10000
+            res = 10000
+            for j in range(i):
+                res = min(res, dpp(j, k -1) + dp[j + 1][i])
+            return res
+        
+        return dpp(len(s) - 1, k)
 ```
