--- a/algorithm/LeetCode/[Hard] 1320. Minimum Distance to Type a Word Using Two Fingers.md
+++ b/algorithm/LeetCode/[Hard] 1320. Minimum Distance to Type a Word Using Two Fingers.md
@@ -56,7 +56,7 @@ Output: 7
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP Bottom-Up)**
 
 Track the position of two fingers after tap the last character.
 
@@ -67,26 +67,53 @@ Memory Usage: 12.7 MB
 ```python
 class Solution:
     def minimumDistance(self, word: str) -> int:
+        
         def d(a, b):
             if a == -1: return 0
             return abs(a // 6 - b // 6) + abs(a % 6 - b % 6)
 
         n = len(word)
-        dp, dp2 = {(-1, ord(word[0]) - ord('A')): 0}, {}
+        dp, dp2 = {(-1, ord(word[0]) - ord('A')): 0}, {}  # {(finder 1 char, finger 2 char): min distance till now}
         for c in [ord(_) - ord('A') for _ in word[1:]]:
             for a, b in dp:
-                dp2[c, b] = min(dp2.get((c, b), 3000), dp[a, b] + d(a, c))
-                dp2[a, c] = min(dp2.get((a, c), 3000), dp[a, b] + d(b, c))
+                dp2[c, b] = min(dp2.get((c, b), float('inf')), dp[a, b] + d(a, c))
+                dp2[a, c] = min(dp2.get((a, c), float('inf')), dp[a, b] + d(b, c))
             dp, dp2 = dp2, {}
         return min(dp.values())
 ```
 
-**Solution 2:**
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 440 ms
+Memory Usage: 35.3 MB
+```
+```python
+class Solution:
+    def minimumDistance(self, word: str) -> int:
+        N = len(word)
+        
+        def d(a, b):
+            if a == -1: return 0
+            return abs(a // 6 - b // 6) + abs(a % 6 - b % 6)
+        
+        @functools.lru_cache(None)
+        def dp(first, second, currIndex):
+            if currIndex >= N:
+                return 0
+            useFirst = d(first, ord(word[currIndex])-ord('A')) + dp(ord(word[currIndex])-ord('A'), second, currIndex + 1)
+            useSecond = d(second, ord(word[currIndex])-ord('A')) + dp(first, ord(word[currIndex])-ord('A'), currIndex + 1)
+            best = min(useFirst, useSecond)
+            return best
+        
+        return dp(-1, -1, 0)
+```
 
-Assume we tap all letters with only finger.
-This the upper bound of our distance tapping with two finger.
+**Solution 3: (DP Bottom-Up)**
 
-Now we can select some letter tapping with the second finger.
+Assume we tap all letters with only finger.  
+This is the upper bound of our distance tapping with two finger.
+
+Now we can select some letter tapping with the second finger.  
 We want to know what is the maximum that we can save.
 
 `dp[i]` means that, the position of our second finger is at character `i`,
