update LeetCode solution - Math

--- a/algorithm/LeetCode/[Easy] 1009. Complement of Base 10 Integer.md
+++ b/algorithm/LeetCode/[Easy] 1009. Complement of Base 10 Integer.md
@@ -35,7 +35,7 @@ Explanation: 10 is "1010" in binary, with complement "0101" in binary, which is 
 
 # Submisssions
 ---
-**Solution 1:**
+**Solution 1: (Math, String)**
 ```
 Runtime: 28 ms
 Memory Usage: 12.8 MB
