update LeetCode solution - String

--- a/algorithm/LeetCode/[Easy] 1029. Two City Scheduling.md
+++ b/algorithm/LeetCode/[Easy] 1029. Two City Scheduling.md
@@ -27,7 +27,7 @@ The total minimum cost is 10 + 30 + 50 + 20 = 110 to have half the people interv
 
 # Submissions
 ---
-**Solution 1: (Greedy)**
+**Solution 1: (Sort)**
 ```
 Runtime: 40 ms
 Memory Usage: 12.7 MB
