update LeetCode solution - String

--- a/algorithm/LeetCode/[Easy] 1071. Greatest Common Divisor of Strings.md
+++ b/algorithm/LeetCode/[Easy] 1071. Greatest Common Divisor of Strings.md
@@ -32,22 +32,7 @@ Output: ""
 
 # Submissions
 ---
-**Solution 1:**
-
-```python
-def gcd(x, y): 
-    if x == y: return x
-    if y > x: return gcd(y, x)
-    return gcd(x - y, y)
-```
-```python
-def gcdOfStrings(self, x: str, y: str) -> str:
-    if x == y: return x
-    if len(y) > len(x): return self.gcdOfStrings(y, x)
-    if x[:len(y)] == y: return self.gcdOfStrings(x[len(y):], y)  # x - y (also need to check the prefix str match)
-    return "" # original gcd alway has a solution (at least '1')
-```
-
+**Solution 1: (GCD)**
 ```
 Runtime: 28 ms
 Memory Usage: 12.7 MB
