update LeetCode solution - String

--- a/algorithm/LeetCode/[Hard] 1096. Brace Expansion II.md
+++ b/algorithm/LeetCode/[Hard] 1096. Brace Expansion II.md
@@ -47,133 +47,52 @@ Explanation: Each distinct word is written only once in the final answer.
 ---
 **Solution 1: (Stack)**
 ```
-Runtime: 52 ms
-Memory Usage: 14.2 MB
+Runtime: 44 ms
+Memory Usage: 13.9 MB
 ```
 ```python
 class Solution:
     def braceExpansionII(self, expression: str) -> List[str]:
-        stack = []; chars=""; pros = []; cur = []; switch = False
-        for i in range(len(expression)):
-            if expression[i] == "{":                     
-                if switch:          
-                    prev_pro = pros.pop()
-                    product = ["".join(c) for c in itertools.product(prev_pro, [chars])] if chars else prev_pro
-                    pros.append(product)
-                    cur = []; chars = ""
-                    switch = False
-                else:              
-                    stack.append(cur)
-                    pros.append([chars])
-                    cur = []
-                    chars = ""
-            elif expression[i]!="}" and expression[i]!=",":
-                chars+=expression[i]
-                if i == len(expression)-1:
-                    if switch:
-                        prev_pro = pros.pop()
-                        product = ["".join(c) for c in itertools.product(prev_pro, [chars])] if chars else prev_pro
-                        cur += product
-                    else:
-                        cur.append(chars)
-            elif expression[i] == ",":
-                if switch:
-                    prev_pro = pros.pop()
-                    product = ["".join(c) for c in itertools.product(prev_pro, [chars])] if chars else prev_pro
-                    cur = stack.pop() + product
-                    switch = False
-                else:
-                    if chars: cur.append(chars)
-                chars = ""
-            elif expression[i]=="}":                     #out
-                if switch:
-                    prev_pro = pros.pop()
-                    product = ["".join(c) for c in itertools.product(prev_pro, [chars])] if prev_pro else [chars]
-                    cur = stack.pop() + product
-                    if pros: prev_prev_pro = pros.pop()
-                    product = ["".join(c) for c in itertools.product(prev_prev_pro, cur)] if prev_prev_pro else cur
-                else:
-                    if chars: cur.append(chars)
-                    prev_pro = pros.pop()
-                    product = ["".join(c) for c in itertools.product(prev_pro, cur)] if prev_pro else cur
+        stack = []
+        cur = set([''])
+        for c in expression:
+            if c == '{':
+                stack.append([cur, set()])
+                cur = set([''])
+            elif c == '}':
+                stack[-1][1] |= cur
+                stack[-1][1] = set([pre + s for pre in stack[-1][0] for s in stack[-1][1]])
+                _, cur = stack.pop()
+            elif c == ',':
+                stack[-1][1] |= cur
+                cur = set([''])
+            else:
+                cur = set([s + c for s in cur])
 
-                if i<len(expression)-1:
-                    if expression[i+1]!="," and expression[i+1]!="}":   #if next-switch
-                        pros.append(product)
-                        switch = True
-                        chars = ""
-                        cur = []
-                    else:              #if next-not-swtich
-                        cur = stack.pop()+product   #if next-out
-                        chars = ""
-                        switch = False
-                else:
-                    cur = stack.pop()+product
-
-        res = list(set(cur))
-        res.sort()
-        return res
+        return sorted(cur)
 ```
 
 **Solution 2: (DFS)**
 ```
-Runtime: 60 ms
+Runtime: 152 ms
 Memory Usage: 14 MB
 ```
 ```python
 class Solution:
     def braceExpansionII(self, expression: str) -> List[str]:
-        def brace(expression):
-            if all(x.isalpha() or x == "," for x in expression) :
-                return set(expression.split(","))
-            ans = set()
-            final = set()
-
-            right = 0
-            left = 0
-            l_index = None
-
-            expr = ""
-
-            for i,char in enumerate(expression):
-                if char == "{":
-                    if l_index is None:
-                        l_index = i
-                    left += 1
-                elif char == "}":
-                    right += 1
-                    if right == left:
-                        temp = set()
-                        for var in brace(expression[l_index+1:i]):     
-                            for x in ans:
-                                temp.add(x + expr + var)
-                            if len(ans) == 0:
-                                temp.add(expr + var)
-
-                        ans = temp
-                        right = 0
-                        left = 0
-                        l_index = None
-                        expr = ""
-                elif left != right:
-                    continue
-                elif char == ",":
-                    for x in ans:
-                        final.add(x + expr)
-                    if len(ans) == 0:
-                        final.add(expr)
-                    ans = set()
-                    expr = ""
-                elif left == 0:
-                    expr += char
-
-            for x in ans:
-                final.add(x + expr)
-
-            if len(ans) == 0:
-                final.add(expr)
-
-            return final
-
-        return sorted(list(brace(expression)))
+        if '}' in expression:
+			# find most inner brace pair indexes
+            r = expression.find('}')
+            l = r - 1 - expression[:r][::-1].find('{')
+            s = set()
+            left, right = expression[:l], expression[r+1:]
+            for midi in self.braceExpansionII(expression[l+1: r]):
+                cur = left + midi + right
+                s = s.union(set(self.braceExpansionII(cur)))
+            return sorted(list(s))
+        elif ',' in expression:
+            return sorted(expression.split(','))
+        else:
+            return [expression]
+        
 ```
