--- a/algorithm/LeetCode/[Hard] 1106. Parsing A Boolean Expression.md
+++ b/algorithm/LeetCode/[Hard] 1106. Parsing A Boolean Expression.md
@@ -43,4 +43,72 @@ Output: false
 
 # Submissions
 ---
-**Solution 1: ()**
+**Solution 1: (Stack)**
+```
+Runtime: 76 ms
+Memory Usage: 13.6 MB
+```
+```python
+class Solution:
+    def parseBoolExpr(self, expression: str) -> bool:
+        st = []
+        i = 0
+        while i < len(expression):
+            cur = expression[i]
+            i += 1
+            if cur == '|' or cur== '&' or cur == '!':
+                st.append(cur)
+            elif cur=='(':
+                st.append(cur)
+            elif cur == ',': continue
+            elif cur == 'f': st.append(False)
+            elif cur == 't': st.append(True)
+            elif cur == ')':
+                op = []
+                while st and st[-1] != '(':
+                    op.append(st.pop())
+                st.pop()
+                operater = st.pop()
+                if operater == '!':
+                    st.append(not op[0])
+                elif operater == '&':
+                    st.append(all(op))
+                else:
+                    st.append(any(op))
+                    
+        return st[0]
+```
+
+**Solution 2: (DFS)**
+```
+Runtime: 72 ms
+Memory Usage: 14 MB
+```
+```python
+class Solution:
+    def parseBoolExpr(self, expression: str) -> bool:
+        def parse(exp, i):
+            if exp[i] == 't':
+                return True, i+1
+            if exp[i] == 'f':
+                return False, i+1
+            if exp[i] == '!':
+                child, i = parse(exp, i+2)
+                return not child, i+1
+            if exp[i] == '&':
+                i += 1  # "("
+                true = True
+                while exp[i] != ")":
+                    child, i = parse(exp, i+1)
+                    true &= child
+                return true, i+1
+            if exp[i] == '|':
+                i += 1  # "("
+                true = False
+                while exp[i] != ")":
+                    child, i = parse(exp, i+1)
+                    true |= child
+                return true, i+1
+        
+        return parse(expression, 0)[0]
+```
