update LeetCode solution - Depth-first Search

--- a/algorithm/LeetCode/[Hard] 1044. Longest Duplicate Substring.md
+++ b/algorithm/LeetCode/[Hard] 1044. Longest Duplicate Substring.md
@@ -62,34 +62,34 @@ I have RabinKarp(text, M,q) function, where text is the string where we search p
 Now, to the `longestDupSubstring(S)` function we run binary search, where we run our `RabinKarp` funcion at most `log n` times.
 
 ```
-Runtime: 2276 ms
-Memory Usage: 40.1 MB
+Runtime: 2296 ms
+Memory Usage: 39.9 MB
 ```
 ```python
 class Solution:
     def longestDupSubstring(self, S: str) -> str:
         
-        def RabinKarp(M, q):
-            if M == 0: return True
-            h, t, d = (1<<(8*M-8))%q, 0, 256
+        def RabinKarp(m):
+            if m == 0: return True
+            h, t, d = (1<<(8*m - 8))%N, 0, 256
             dic = defaultdict(list)
-            for i in range(M): 
-                t = (d * t + ord(S[i]))% q
-            dic[t].append(i-M+1)
-            for i in range(len(S) - M):
-                t = (d*(t-ord(S[i])*h) + ord(S[i + M]))% q
+            for i in range(m): 
+                t = (d * t + ord(S[i]))% N
+            dic[t].append(i-m+1)
+            for i in range(len(S) - m):
+                t = (d*(t-ord(S[i])*h) + ord(S[i + m]))% N
                 for j in dic[t]:
-                    if S[i+1:i+M+1] == S[j:j+M]:
-                        return (True, S[j:j+M])
+                    if S[i+1:i+m+1] == S[j:j+m]:
+                        return (True, S[j:j+m])
                 dic[t].append(i+1)
             return (False, "")
         
         beg, end = 0, len(S)
-        q = (1<<31) - 1 
+        N = (1<<31) - 1 
         Found = ""
         while beg + 1 < end:
             mid = (beg + end)//2
-            isFound, candidate = RabinKarp(mid, q)
+            isFound, candidate = RabinKarp(mid)
             if isFound:
                 beg, Found = mid, candidate
             else:
