update LeetCode solution - Depth-first Search

--- a/algorithm/LeetCode/[Hard] 1044. Longest Duplicate Substring.md
+++ b/algorithm/LeetCode/[Hard] 1044. Longest Duplicate Substring.md
@@ -35,7 +35,7 @@ Output: ""
 This is quite difficult problem in fact and you will be very unlucky if you have this on real interview. However if you familiar with Rabin-Karp algorighm, it will be not so difficult.
 You can see it in full details on Wikipedia: https://en.wikipedia.org/wiki/Rabin–Karp_algorithm
 
-Here I briefly explain the idea of it. Imagine, that we have string abcabcddcb, and we want to check if there are two substrings of size 3, which are equal. Idea is to hash this substrings, using rolling hash, where d is our base and q is used to avoid overflow.
+Here I briefly explain the idea of it. Imagine, that we have string `abcabcddcb`, and we want to check if there are two substrings of size 3, which are equal. Idea is to hash this substrings, using rolling hash, where `d` is our base and `q` is used to avoid overflow.
 
 1. for `abc` we evaluate `[ord(a)*d^2 + ord(b)*d^1 + ord(c)*d^1] % q`
 1. for `bca` we evaluate `[ord(b)*d^2 + ord(c)*d^1 + ord(a)*d^1] % q`
@@ -71,21 +71,21 @@ class Solution:
         
         def RabinKarp(m):
             if m == 0: return True
-            h, t, d = (1<<(8*m - 8))%N, 0, 256
+            h, t, d = (1<<(8*m - 8))%q, 0, 256
             dic = defaultdict(list)
             for i in range(m): 
-                t = (d * t + ord(S[i]))% N
-            dic[t].append(i-m+1)
+                t = (d * t + ord(S[i]))% q
+            dic[t].append(0)
             for i in range(len(S) - m):
-                t = (d*(t-ord(S[i])*h) + ord(S[i + m]))% N
+                t = (d*(t-ord(S[i])*h) + ord(S[i + m]))% q
                 for j in dic[t]:
                     if S[i+1:i+m+1] == S[j:j+m]:
                         return (True, S[j:j+m])
                 dic[t].append(i+1)
             return (False, "")
-        
+
         beg, end = 0, len(S)
-        N = (1<<31) - 1 
+        q = (1<<31) - 1 
         Found = ""
         while beg + 1 < end:
             mid = (beg + end)//2
