--- a/algorithm/LeetCode/[Hard] 1028. Recover a Tree From Preorder Traversal.md
+++ b/algorithm/LeetCode/[Hard] 1028. Recover a Tree From Preorder Traversal.md
@@ -41,3 +41,131 @@ Output: [1,401,null,349,88,90]
 
 # Submissions
 ---
+**Solution 1: (Iterative, Array)**
+
+1. I use an array `arr` to store the most recent nodes. The index of this array indicates the depth of the nodes
+1. Simply collect number of dashes (to know the depth of the number) and digits of the number
+1. Once we have the depth and the number, we add it to the `arr` based on its depth. We can replace the old one if there is because we don't need the old ones anymore (as the natural of preorder)
+1. Add to the parent if the depth is greater than 0. Only add to the `right` if the `left` is already added (this is from the description)
+1. Reset and move to the next ones.
+1. Return the first element in the array, that is the root of our tree.
+
+```
+Runtime: 96 ms
+Memory Usage: 14.3 MB
+```
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def recoverFromPreorder(self, S: str) -> TreeNode:
+        arr = []
+        i = d = 0
+        num = "" 
+        while i < len(S):
+            if S[i] == "-":
+                # collect number of dashes, it will tell us the depth of the next number/node
+                while S[i] == "-":
+                    d += 1
+                    i += 1
+            else:
+                # collect all digits of this current number
+                while i < len(S) and S[i] != "-":
+                    num += S[i]
+                    i += 1
+                    
+                # create and put new node into array, replace the previous one in the current depth
+                new_node = TreeNode(num)    
+                if len(arr) == d:
+                    arr.append(new_node)
+                elif len(arr) > d:
+                    arr[d] = new_node
+                    
+                # add new node to parent if depth > 0   
+                if d != 0:
+                    parent = arr[d-1]
+                    if parent.left:    
+                        parent.right = new_node
+                    else:    
+                        parent.left = new_node
+                    
+                # reset dash count and number after finishing   
+                d = 0    
+                num = ""
+                
+        return arr[0]
+```
+
+**Solution 2: (DFS)**
+```
+Runtime: 48 ms
+Memory Usage: 17.6 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* build(vector<pair<int,int>>& cnt, int idx)
+    {
+        if(idx>=cnt.size()) return nullptr;
+        TreeNode* ans=new TreeNode(cnt[idx].second);
+
+        bool flag=true;
+        for(int i=idx+1;i<cnt.size();i++)
+        {
+            if(cnt[i].first<=cnt[idx].first) break;
+            if(cnt[i].first-1==cnt[idx].first && flag)
+            {
+                ans->left=build(cnt,i);
+                flag=false;
+            }
+            else if(cnt[i].first-1==cnt[idx].first && !flag)
+            {
+                ans->right=build(cnt,i);
+                break;
+            }
+        }
+
+        return ans;
+    }
+    TreeNode* recoverFromPreorder(string S) {
+        int depth=0;
+        int val;
+        vector<pair<int,int>> cnt;
+        for(int i=0;i<S.size();i++)
+        {
+            int j=i;
+            int count=0;
+            while(S[j]=='-')
+            {
+                count++;
+                j++;
+            }
+            string val="";
+            while(j<S.size() && isdigit(S[j]))
+            {
+                val+=S[j];
+                j++;
+            }
+            int temp=stoi(val);
+            cnt.push_back({count,temp});
+            i=j-1;  
+        }
+        return build(cnt,0);
+    }
+};
+```
