update LeetCode solution - Hash Table

--- a/algorithm/LeetCode/[Hard] 1001. Grid Illumination.md
+++ b/algorithm/LeetCode/[Hard] 1001. Grid Illumination.md
@@ -43,3 +43,77 @@ Before performing the second query we have only the lamp [4,4] on.  Now the quer
 
 # Submissions
 ---
+**Solution 1: (Hash Table)**
+```
+Runtime: 1180 ms
+Memory Usage: 101.7 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> gridIllumination(int N, vector<vector<int>>& lamps, vector<vector<int>>& queries) {
+        unordered_map<int, int> xm, ym, summ, diffm;
+        unordered_set<long long> us;
+        for (vector<int>& v : lamps)
+        {
+            xm[v[0]]++;
+            ym[v[1]]++;
+            summ[v[0] + v[1]]++;
+            diffm[v[0] - v[1]]++;
+            us.insert((long long)v[0] << 32 | v[1]);
+        }
+        vector<int> ret;
+        vector<vector<int>> dirs = {{1,1},{1,0},{1,-1},{0,1},{0,0},{0,-1},{-1,1},{-1,0},{-1,-1}};
+        for (vector<int>& q : queries)
+        {
+            if (xm.count(q[0]) || ym.count(q[1]) || summ.count(q[0] + q[1]) ||
+                diffm.count(q[0] - q[1])) ret.push_back(1);
+            else ret.push_back(0);
+            for (vector<int>& d : dirs)
+            {
+                int tmpx = q[0] + d[0], tmpy = q[1] + d[1];
+                if (tmpx < 0 || tmpx >= N || tmpy < 0 || tmpy >= N) continue;
+                if (!us.count((long long)tmpx << 32 | tmpy)) continue;
+                if (!--xm[tmpx]) xm.erase(tmpx);
+                if (!--ym[tmpy]) ym.erase(tmpy);
+                if (!--summ[tmpx + tmpy]) summ.erase(tmpx + tmpy);
+                if (!--diffm[tmpx - tmpy]) diffm.erase(tmpx - tmpy);
+                us.erase((long long)tmpx << 32 | tmpy);
+            }
+        }
+        return ret;
+    }
+};
+```
+
+**Solution 2: (Hash Table)**
+```
+Runtime: 1276 ms
+Memory Usage: 29.6 MB
+```
+```python
+class Solution:
+    def gridIllumination(self, N: int, lamps: List[List[int]], queries: List[List[int]]) -> List[int]:
+        # count the number of lamps on each row, column, & diag
+        cnt_x = Counter(map(lambda x:x[0], lamps))
+        cnt_y = Counter(map(lambda x:x[1], lamps))
+        cnt_xpy = Counter(map(lambda x:x[0]+x[1], lamps))
+        cnt_xmy = Counter(map(lambda x:x[0]-x[1], lamps))
+        set_lamps = set(tuple(lamp) for lamp in lamps)
+        for i in range(len(queries)):
+            x, y = queries[i]
+            # inplace write ans to queries
+            # 1 if any lamp is remained in the same row/column/diag
+            queries[i] = 1 if (cnt_x[x] or cnt_y[y] or cnt_xpy[x+y] or cnt_xmy[x-y]) else 0
+            for x_shift in range(-1,2):
+                for y_shift in range(-1,2):
+                    xs, ys = x+x_shift, y+y_shift
+                    # remove a lamp on xs, ys
+                    if (xs, ys) in set_lamps:
+                        cnt_x[xs] -= 1
+                        cnt_y[ys] -= 1
+                        cnt_xpy[xs+ys] -= 1
+                        cnt_xmy[xs-ys] -= 1
+                        set_lamps.remove((xs, ys))
+        return queries
+```
